--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,13 +11,13 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">  
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
-<link rel="stylesheet" href="css/custom.css">
+<link rel="stylesheet" href="{{site.baseurl}}/css/custom.css">
 
 <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
 
 <!-- Magnific Popup core JS file -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="{{site.baseurl}}/js/custom.js"></script>
     
 
 </head>
