--- a/_layouts/calendar.html
+++ b/_layouts/calendar.html
@@ -1,5 +1,4 @@
 ---
-layout: default
 calendar_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootstrap-calendar/css/calendar.css">
 calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootstrap/css/bootstrap.css">
 ---
@@ -26,12 +25,12 @@ calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootst
       </div>
     </div>
 
-    <h3></h3>
+    <h3 id={{page.title}}></h3>
     <small>{{ page.calendar_caption }}</small>
   </div>
 
 
-  <div id="calendar"></div>
+  <div id="{{page.title}}calendar"></div>
 
   <div class="clearfix"></div>
 
@@ -108,7 +107,7 @@ calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootst
         if(!events) {
           return;
         }
-        var list = $('#eventlist');
+        var list = $('#{{page.title}}eventlist');
         list.html('');
 
         $.each(events, function(key, val) {
@@ -118,7 +117,7 @@ calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootst
         });
       },
       onAfterViewLoad: function(view) {
-        $('.page-header h3').text(this.getTitle());
+        $('.page-header h3#{{page.title}}').text(this.getTitle());
         $('.btn-group button').removeClass('active');
         $('button[data-calendar-view="' + view + '"]').addClass('active');
       },
@@ -129,7 +128,7 @@ calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootst
       }
     };
 
-    var calendar = $('#calendar').calendar(options);
+    var calendar = $('#{{page.title}}calendar').calendar(options);
 
     $('.btn-group button[data-calendar-nav]').each(function() {
       var $this = $(this);
@@ -145,23 +144,23 @@ calendar_bootstrap_css: <link rel="stylesheet" href="!PATH_TO_COMPONENTS!/bootst
       });
     });
 
-    $('#first_day').change(function(){
+    $('#{{page.title}}first_day').change(function(){
       var value = $(this).val();
       value = value.length ? parseInt(value) : null;
       calendar.setOptions({first_day: value});
       calendar.view();
     });
 
-    $('#language').change(function(){
+    $('#{{page.title}}language').change(function(){
       calendar.setLanguage($(this).val());
       calendar.view();
     });
 
-    $('#events-in-modal').change(function(){
+    $('#{{page.title}}events-in-modal').change(function(){
       var val = $(this).is(':checked') ? $(this).val() : null;
       calendar.setOptions({modal: val});
     });
-    $('#events-modal .modal-header, #events-modal .modal-footer').click(function(e){
+    $('#{{page.title}}events-modal .modal-header, #{{page.title}}events-modal .modal-footer').click(function(e){
       
     });
   }
